--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,145 +2,163 @@ name: Release
 
 on:
   push:
-    tags:
-      - 'v*'
+    branches: [main]
+
+concurrency:
+  group: release-${{ github.ref }}
+  cancel-in-progress: false
 
 permissions:
   contents: write
+  issues: write
+  pull-requests: write
 
 jobs:
+  release-please:
+    name: Release Please
+    runs-on: ubuntu-latest
+
+    outputs:
+      release_created: ${{ steps.release.outputs.release_created }}
+      tag_name: ${{ steps.release.outputs.tag_name }}
+
+    steps:
+      - name: Release Please
+        id: release
+        uses: googleapis/release-please-action@v4
+        with:
+          config-file: release-please-config.json
+          manifest-file: .release-please-manifest.json
+
   build:
     name: Build (${{ matrix.target }})
-    runs-on: ${{ matrix.os }}
+    needs: release-please
+    if: ${{ needs.release-please.outputs.release_created }}
+
     strategy:
       fail-fast: false
       matrix:
         include:
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
+            archive: tar.gz
+          - target: aarch64-unknown-linux-gnu
+            os: ubuntu-24.04-arm
+            archive: tar.gz
           - target: x86_64-apple-darwin
-            os: macos-latest
+            os: macos-13
+            archive: tar.gz
           - target: aarch64-apple-darwin
             os: macos-latest
+            archive: tar.gz
+
+    runs-on: ${{ matrix.os }}
+
+    permissions:
+      contents: write
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.release-please.outputs.tag_name }}
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: ${{ matrix.target }}
 
-      - name: Cache cargo registry
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-${{ matrix.target }}-cargo-release-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-${{ matrix.target }}-cargo-release-
+      - name: Cache cargo registry and build
+        uses: Swatinem/rust-cache@v2
 
       - name: Build release binary
         run: cargo build --release --target ${{ matrix.target }}
 
-      - name: Package binary (Unix)
+      - name: Create archive
         run: |
-          cd target/${{ matrix.target }}/release
-          tar -czvf ../../../islands-${{ matrix.target }}.tar.gz islands
-        if: runner.os != 'Windows'
+          TAG="${{ needs.release-please.outputs.tag_name }}"
+          VERSION="${TAG#islands-v}"
+          ARCHIVE_NAME="islands_${VERSION}_${{ matrix.target }}"
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: islands-${{ matrix.target }}
-          path: islands-${{ matrix.target }}.tar.gz
+          mkdir -p dist
+          cp target/${{ matrix.target }}/release/islands dist/
+          cd dist
+          tar -czvf "${ARCHIVE_NAME}.tar.gz" islands
+          sha256sum "${ARCHIVE_NAME}.tar.gz" > "${ARCHIVE_NAME}.tar.gz.sha256"
 
-  release:
-    name: Create Release
+      - name: Upload release assets
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          TAG="${{ needs.release-please.outputs.tag_name }}"
+          gh release upload "$TAG" dist/*.tar.gz dist/*.sha256 --clobber
+
+  homebrew:
+    name: Update Homebrew Formula
+    needs: [release-please, build]
+    if: ${{ needs.release-please.outputs.release_created }}
     runs-on: ubuntu-latest
-    needs: build
+
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: artifacts
-
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: artifacts/**/*.tar.gz
-          generate_release_notes: true
-
-  publish-crates:
-    name: Publish to crates.io
-    runs-on: ubuntu-latest
-    needs: release
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Publish crates
-        uses: katyo/publish-crates@v2
-        with:
-          registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-          ignore-unpublished-changes: true
-
-  update-homebrew:
-    name: Update Homebrew Tap
-    runs-on: ubuntu-latest
-    needs: release
-    steps:
-      - name: Extract version
-        id: version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
-
-      - name: Checkout homebrew-islands
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          repository: panbanda/homebrew-islands
-          token: ${{ secrets.HOMEBREW_TAP_GITHUB_TOKEN }}
-          path: homebrew-islands
+          ref: ${{ needs.release-please.outputs.tag_name }}
 
       - name: Download release artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: artifacts
-
-      - name: Calculate SHA256 checksums
-        id: sha
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo "SHA_LINUX=$(sha256sum artifacts/islands-x86_64-unknown-linux-gnu/islands-x86_64-unknown-linux-gnu.tar.gz | cut -d' ' -f1)" >> $GITHUB_OUTPUT
-          echo "SHA_DARWIN=$(sha256sum artifacts/islands-x86_64-apple-darwin/islands-x86_64-apple-darwin.tar.gz | cut -d' ' -f1)" >> $GITHUB_OUTPUT
-          echo "SHA_DARWIN_ARM=$(sha256sum artifacts/islands-aarch64-apple-darwin/islands-aarch64-apple-darwin.tar.gz | cut -d' ' -f1)" >> $GITHUB_OUTPUT
+          mkdir -p dist
+          TAG="${{ needs.release-please.outputs.tag_name }}"
+          gh release download "$TAG" --pattern "*.tar.gz" --dir dist
+          gh release download "$TAG" --pattern "*.sha256" --dir dist
 
-      - name: Update formula
+      - name: Create consolidated checksums
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          cat > homebrew-islands/Formula/islands.rb << 'EOF'
+          TAG="${{ needs.release-please.outputs.tag_name }}"
+          cat dist/*.sha256 | sort > dist/checksums.txt
+          gh release upload "$TAG" dist/checksums.txt --clobber
+
+      - name: Generate Homebrew formula
+        env:
+          HOMEBREW_TAP_GITHUB_TOKEN: ${{ secrets.HOMEBREW_TAP_GITHUB_TOKEN }}
+        run: |
+          TAG="${{ needs.release-please.outputs.tag_name }}"
+          VERSION="${TAG#islands-v}"
+
+          DARWIN_AMD64_SHA=$(cat dist/islands_${VERSION}_x86_64-apple-darwin.tar.gz.sha256 | cut -d' ' -f1)
+          DARWIN_ARM64_SHA=$(cat dist/islands_${VERSION}_aarch64-apple-darwin.tar.gz.sha256 | cut -d' ' -f1)
+          LINUX_AMD64_SHA=$(cat dist/islands_${VERSION}_x86_64-unknown-linux-gnu.tar.gz.sha256 | cut -d' ' -f1)
+          LINUX_ARM64_SHA=$(cat dist/islands_${VERSION}_aarch64-unknown-linux-gnu.tar.gz.sha256 | cut -d' ' -f1)
+
+          cat > islands.rb << EOF
           class Islands < Formula
-            desc "Codebase indexing and inquiry system using LEANN for semantic search"
+            desc "Codebase indexing and semantic search using LEANN"
             homepage "https://github.com/panbanda/islands"
-            version "${{ steps.version.outputs.VERSION }}"
+            version "${VERSION}"
             license "MIT"
 
             on_macos do
               if Hardware::CPU.arm?
-                url "https://github.com/panbanda/islands/releases/download/v${{ steps.version.outputs.VERSION }}/islands-aarch64-apple-darwin.tar.gz"
-                sha256 "${{ steps.sha.outputs.SHA_DARWIN_ARM }}"
+                url "https://github.com/panbanda/islands/releases/download/${TAG}/islands_${VERSION}_aarch64-apple-darwin.tar.gz"
+                sha256 "${DARWIN_ARM64_SHA}"
               else
-                url "https://github.com/panbanda/islands/releases/download/v${{ steps.version.outputs.VERSION }}/islands-x86_64-apple-darwin.tar.gz"
-                sha256 "${{ steps.sha.outputs.SHA_DARWIN }}"
+                url "https://github.com/panbanda/islands/releases/download/${TAG}/islands_${VERSION}_x86_64-apple-darwin.tar.gz"
+                sha256 "${DARWIN_AMD64_SHA}"
               end
             end
 
             on_linux do
-              url "https://github.com/panbanda/islands/releases/download/v${{ steps.version.outputs.VERSION }}/islands-x86_64-unknown-linux-gnu.tar.gz"
-              sha256 "${{ steps.sha.outputs.SHA_LINUX }}"
+              if Hardware::CPU.arm?
+                url "https://github.com/panbanda/islands/releases/download/${TAG}/islands_${VERSION}_aarch64-unknown-linux-gnu.tar.gz"
+                sha256 "${LINUX_ARM64_SHA}"
+              else
+                url "https://github.com/panbanda/islands/releases/download/${TAG}/islands_${VERSION}_x86_64-unknown-linux-gnu.tar.gz"
+                sha256 "${LINUX_AMD64_SHA}"
+              end
             end
 
             def install
@@ -153,11 +171,15 @@ jobs:
           end
           EOF
 
-      - name: Commit and push
-        working-directory: homebrew-islands
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git add Formula/islands.rb
-          git commit -m "Update islands to v${{ steps.version.outputs.VERSION }}"
-          git push
+          if [ -n "$HOMEBREW_TAP_GITHUB_TOKEN" ]; then
+            git clone "https://x-access-token:${HOMEBREW_TAP_GITHUB_TOKEN}@github.com/panbanda/homebrew-islands.git" tap
+            mkdir -p tap/Formula
+            cp islands.rb tap/Formula/islands.rb
+
+            cd tap
+            git config user.name "github-actions[bot]"
+            git config user.email "github-actions[bot]@users.noreply.github.com"
+            git add Formula/islands.rb
+            git commit -m "Update islands to ${VERSION}"
+            git push
+          fi
