fix: correct Rust edition and release-please config

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,8 +1,15 @@
 {
   "packages": {
     ".": {
-      "release-type": "rust",
-      "component": "islands"
+      "release-type": "simple",
+      "component": "islands",
+      "extra-files": [
+        {
+          "type": "toml",
+          "path": "Cargo.toml",
+          "jsonpath": "$.workspace.package.version"
+        }
+      ]
     },
     ".claude/skills": {
       "release-type": "simple",
