--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ version = "0.2.0"
 edition = "2024"
 rust-version = "1.92"
 license = "MIT"
-authors = ["Islands Contributors"]
+authors = ["Jonathan Reyes <me@jonathanreyes.com>"]
 repository = "https://github.com/panbanda/islands"
 documentation = "https://github.com/panbanda/islands#readme"
 keywords = ["mcp", "semantic-search", "codebase-indexing", "leann", "rag", "vector-database"]
