fix: include embeddings in default features
Without the embeddings feature enabled, semantic search returns empty
results with the warning "Search without embeddings feature returns
empty results". This makes the core search functionality non-functional
for default builds.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ name = "islands"
 path = "src/lib.rs"
 
 [features]
-default = ["mcp", "agent", "watch"]
+default = ["mcp", "agent", "watch", "embeddings"]
 mcp = []
 agent = []
 watch = ["notify"]
